rust/kcl-lib/tests/array_range_units_default_count/execution_error.snap
---
source: kcl-lib/src/simulation_tests.rs
description: Error from executing array_range_units_default_count.kcl
---
KCL Semantic error

  × semantic: Range start and end must be of the same type, but found 0 (no
  │ units, defaulting to mm or deg) and 3: number(Count)
   ╭────
 1 │ indices = [0 ..< 3_]
   ·           ─────┬────
   ·                ╰── tests/array_range_units_default_count/input.kcl
   ╰────
